# TodoistSDK

./: .gitignore  CHANGELOG.md  LICENSE  README.md  fourmolu.yaml  stack.yaml  todoist-sdk.cabal
integration-test/: CommentIntegrationSpec.hs  Helpers.hs  LabelIntegrationSpec.hs  ProjectIntegrationSpec.hs  SectionIntegrationSpec.hs  TaskIntegrationSpec.hs
src/TodoistSDK/: Capabilities.hs  Types.hs
src/TodoistSDK/Internal/: HTTP.hs
src/TodoistSDK/Interpreter/: Runner.hs  TodoistIO.hs  Trace.hs  Types.hs
src/Web/: Todoist.hs
src/Web/Todoist/: Builder.hs  Lens.hs  Param.hs  Patch.hs  Project.hs  QueryParam.hs  Runner.hs  Task.hs
src/Web/Todoist/Builder/: Has.hs
src/Web/Todoist/Domain/: Comment.hs  Label.hs  Project.hs  Section.hs  Task.hs  Types.hs
src/Web/Todoist/Internal/: Error.hs  HTTP.hs  Json.hs  Request.hs  Types.hs
src/Web/Todoist/Runner/: HttpClient.hs  IO.hs  TodoistIO.hs  Trace.hs
src/Web/Todoist/Runner/IO/: Core.hs  Interpreters.hs
src/Web/Todoist/Runner/TodoistIO/: Comment.hs  Core.hs  Label.hs  Project.hs  Section.hs  Task.hs
src/Web/Todoist/Util/: Builder.hs  QueryParam.hs
src/internal/Web/Todoist/Internal/: Config.hs  Error.hs  HTTP.hs  Json.hs  Request.hs  Types.hs
test/Web/Todoist/: BuilderSpec.hs  TestHelpers.hs
test/Web/Todoist/Runner/: TodoistIOSpec.hs
test/Web/Todoist/Runner/TodoistIO/: CommentSpec.hs  LabelSpec.hs  SectionSpec.hs  TaskSpec.hs
