cabal-version:       2.2

name:                todoist-sdk
version:             0.1.0.0
-- TODO: PROJECT_SETUP - Add synopsis and description
-- synopsis:
-- description:
homepage:            https://github.com/samahri/TodoistSDK
license:             BSD-3-Clause
license-file:        LICENSE
author:              Sam Saud Almahri
maintainer:          sam.salmahri@gmail.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Web.Todoist.Domain.Project
                       Web.Todoist.Domain.Task
                       Web.Todoist.Domain.Comment
                       Web.Todoist.Domain.Section
                       Web.Todoist.Domain.Label
                       Web.Todoist.Domain.Types
                       Web.Todoist.Builder.Has
                       Web.Todoist.Builder
                       Web.Todoist.QueryParam
                       Web.Todoist.Runner
                       Web.Todoist.Runner.TodoistIO
                       Web.Todoist.Runner.TodoistIO.Core
                       Web.Todoist.Runner.TodoistIO.Project
                       Web.Todoist.Runner.TodoistIO.Task
                       Web.Todoist.Runner.TodoistIO.Comment
                       Web.Todoist.Runner.TodoistIO.Section
                       Web.Todoist.Runner.TodoistIO.Label
                       Web.Todoist.Runner.Trace
                       Web.Todoist.Internal.Config
                       Web.Todoist.Internal.Error
                       Web.Todoist.Internal.HTTP
                       Web.Todoist.Internal.Request
                       Web.Todoist.Internal.Types
                       Web.Todoist.Internal.Json
  default-language:    Haskell2010
  -- TODO: BUILD_CONFIG - Tighten dependency version constraints for better stability
  build-depends:       base >= 4.7 && < 5,
                       text >= 2.1.2,
                       transformers >= 0.6.1.1,
                       req >= 3.13.4,
                       bytestring >= 0.12.2.0,
                       aeson >=1.5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
  default-extensions: InstanceSigs,
                      OverloadedStrings,
                      NoImplicitPrelude

test-suite todoist-sdk-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Web.Todoist.TestHelpers
      Web.Todoist.Runner.TodoistIOSpec
      Web.Todoist.Runner.TodoistIO.TaskSpec
      Web.Todoist.Runner.TodoistIO.CommentSpec
      Web.Todoist.Runner.TodoistIO.SectionSpec
      Web.Todoist.Runner.TodoistIO.LabelSpec
      Web.Todoist.BuilderSpec
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , todoist-sdk
    , hspec >=2.11
    , hspec-discover >=2.11
    , aeson >=1.5
    , bytestring >=0.12.2.0
    , text
  build-tool-depends:
      hspec-discover:hspec-discover
  default-language: Haskell2010
  default-extensions: InstanceSigs,
                      OverloadedStrings,
                      NoImplicitPrelude

test-suite integration-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      ProjectIntegrationSpec
      TaskIntegrationSpec
      CommentIntegrationSpec
      SectionIntegrationSpec
      LabelIntegrationSpec
      Helpers
  hs-source-dirs:
      integration-test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , todoist-sdk
    , hspec >=2.11
    , hspec-discover >=2.11
    , text >=2.1.2
    , random >=1.2
    , transformers >=0.6.1.1
    , dotenv >=0.11
  build-tool-depends:
      hspec-discover:hspec-discover
  default-language: Haskell2010
  default-extensions: InstanceSigs,
                      OverloadedStrings,
                      NoImplicitPrelude

-- TODO: CI_CD - Add .github/workflows/ for automated testing
-- TODO: EXAMPLES - Move tutorials to examples/ and add more comprehensive examples
-- TODO: CONFIG - Add config/ directory for environment-specific settings
